kubernetes/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - http:
      paths:
      - path: /backend
        pathType: Prefix
        backend:
          service:
            name: metabase-server-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: metabase-client-svc
            port:
              number: 80
